--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Compiled class file
 *.class
-
+target
 # Log file
 *.log
 
 # BlueJ files
 *.ctxt
-
+mvnw
+mvnw.cmd
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -18,6 +19,7 @@
 *.zip
 *.tar.gz
 *.rar
-
+*.iml
+*.md
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
